--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "diamond",
   "version": "0.1.0",
+  "homepage": "https://hovanvu26699.github.io/diamond_hotel",
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.11.11",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
